Remove [link], mostly Maintenance upgrade. Some security fixes

--- a/popup.html
+++ b/popup.html
@@ -32,7 +32,7 @@
     		when you click on them.
     	</p>
     	<p>
-    		Made by <a href="https://scratch.mit.edu/users/pufflegamerz" target="_newtab">@pufflegamerz</a>.
+    		ScratchFormat Copyright 2017-2020, by the Scratchformat Contributors.
     		<br>
     		This is open-source. See <a href="https://github.com/ScratchFormat/" target="_newtab">Our Github</a>.
     	</p>
